Thu Jun 26 14:30:48 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Objref_VarOut_T.h:

	  Added 'typedef T _obj_type;' to the _var class for interfaces. This
	  allows access to T's static methods and typedefs from template code
	  using the corresponding _var.

Thu Jun 26 14:03:48 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_sh.cpp (visit_interface):

	  To the generation of the typedefs added in

	  Mon Jun 23 19:04:03 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

	  added a global "::" prefix to the scoped name. This eliminates
	  confusion when a module name reappears at a more deeply nested 
	  level.

Thu Jun 26 17:35:11 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Event/lib/Driver.cpp:
        * orbsvcs/tests/Event/lib/Driver.h:
        * orbsvcs/tests/EC_Throughput/ECT_Throughput.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_ConsumerAdmin.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_Defaults.h:
        * orbsvcs/orbsvcs/CosEvent/CEC_EventChannel.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_EventChannel.h:
        * orbsvcs/orbsvcs/CosEvent/CEC_EventChannel.i:
        * orbsvcs/orbsvcs/CosEvent/CEC_SupplierAdmin.cpp:
        * orbsvcs/orbsvcs/Event/EC_Defaults.h:
        * orbsvcs/orbsvcs/Event/EC_Event_Channel_Base.cpp:
        * orbsvcs/orbsvcs/Event/EC_Event_Channel_Base.h:
        * orbsvcs/orbsvcs/Event/EC_Event_Channel_Base.i:
        * orbsvcs/orbsvcs/Event/EC_Per_Supplier_Filter.cpp:
          Removed busy_hwm and max_write_delay attributes. These can be set in
          the ESF framework. The ones in the EC aren't used anymore when the
          ESF framework was introduced. This fixes bugzilla entry [530].

Wed Jun 25 17:54:00 2003  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/examples/Notify/Lanes/Lanes.mpc:
        * orbsvcs/orbsvcs/RT_Notification.mpc:
        * orbsvcs/tests/Event/Mcast/Complex/Complex.mpc: