@@ -15,13 +15,12 @@ vt_graph_impl::vt_graph_impl (int num_nodes)
 	for (int i = 0; i < num_nodes; i++)
 		{
 			add_node ("OLD");
-			//if (i != 0) nodes_ ()[i]->add_edge (nodes_ ()[0]);
+			if (i != 0) nodes_ ()[i]->add_edge (nodes_ ()[0]);
 		}
 }
 
 CORBA::Long vt_graph_impl::size (void)
 {
-	//cout << "Num nodes = " << nodes_ ().length () << endl;
 	return nodes_ ().length ();
 }
 
@@ -71,33 +70,23 @@ test_impl::test_impl (CORBA::ORB_ptr orb) : orb_ (CORBA::ORB::_duplicate (orb))
 void test_impl::pass_obj_graph_in (Supports_Test::graph * graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
 {
 
-  //cout << "pass_obj_graph_in" << endl;
-
   ACE_ASSERT (graph_param->size () == 4);
 	graph_param->add_node ("NEW1");
 	ACE_ASSERT (graph_param->size () == 5);
-
-  //cout << endl;
 
 }
 
 void test_impl::pass_vt_graph_in (Supports_Test::vt_graph * vt_graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
 {
 
-  //cout << "pass_vt_graph_in" << endl;
-
 	ACE_ASSERT (vt_graph_param->size () == 3);
 	vt_graph_param->add_node ("NEW1");
 	ACE_ASSERT (vt_graph_param->size () == 4);
-
-  //cout << endl;
 
 }
 
 void test_impl::pass_obj_graph_out (Supports_Test::graph_out graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
 {
-
-  //cout << "pass_obj_graph_out" << endl;
 
   vt_graph_impl * the_vt_graph = 0;
   ACE_NEW (the_vt_graph, vt_graph_impl (4));
@@ -113,8 +102,6 @@ void test_impl::pass_obj_graph_out (Supports_Test::graph_out graph_param ACE_ENV
 void test_impl::pass_vt_graph_out (Supports_Test::vt_graph_out vt_graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
 {
 
-  //cout << "pass_vt_graph_out" << endl;
-
   vt_graph_impl * the_vt_graph = 0;
 	ACE_NEW (the_vt_graph, vt_graph_impl (3));
 	vt_graph_param = the_vt_graph;
@@ -123,14 +110,10 @@ void test_impl::pass_vt_graph_out (Supports_Test::vt_graph_out vt_graph_param AC
 	vt_graph_param->add_node ("NEW1");
 	ACE_ASSERT (vt_graph_param->size () == 4);
 
-  //cout << endl;
-
 }
 
 void test_impl::pass_obj_graph_inout (Supports_Test::graph * &graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
 {
-
-  //cout << "pass_obj_graph_inout" << endl;
 
   ACE_ASSERT (graph_param->size () == 6);
 	graph_param->add_node ("NEW!");
@@ -141,13 +124,9 @@ void test_impl::pass_obj_graph_inout (Supports_Test::graph * &graph_param ACE_EN
 void test_impl::pass_vt_graph_inout (Supports_Test::vt_graph * &vt_graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
 {
 
-  //cout << "pass_vt_graph_inout" << endl;
-
 	ACE_ASSERT (vt_graph_param->size () == 5);
 	vt_graph_param->add_node ("NEW!");
 	ACE_ASSERT (vt_graph_param->size () == 6);
-
-  //cout << endl;
 
 }
 
@@ -176,6 +155,7 @@ void node_impl::add_edge (Supports_Test::Node * neighbor)
 	degree_ (degree_ () + 1);
 	neighbors_ ().length (neighbors_ ().length () + 1);
 	neighbors_ ()[neighbors_ ().length () - 1] = neighbor;
+  neighbor->_add_ref ();
 	return;
 }
 	
